--- a/prioriza/templates/base.html
+++ b/prioriza/templates/base.html
@@ -19,8 +19,25 @@
     </title>
   </head>
   <body>
-    {% block content %}
-    {% endblock %}
+
+    <div class="container">
+      <div class="row my-4">
+        <div class="col-md-12 text-center">
+          <h1>
+            prioriza
+          </h1>
+        </div>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          {% block content %}
+          {% endblock %}
+        </div>
+      </div>
+    </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
