--- a/prioriza/templates/base.html
+++ b/prioriza/templates/base.html
@@ -24,13 +24,15 @@
       <div class="row my-4">
         <div class="col-md-12 text-center">
           <h1>
-            prioriza
+            <b>
+              prioriza
+            </b>
           </h1>
         </div>
       </div>
     </div>
 
-    <div class="container">
+    <div class="container card card-body bg-light">
       <div class="row">
         <div class="col-md-12">
           {% block content %}
