Resize content col width in base template

--- a/prioriza/templates/base.html
+++ b/prioriza/templates/base.html
@@ -32,9 +32,9 @@
       </div>
     </div>
 
-    <div class="container card card-body bg-light">
+    <div class="container">
       <div class="row">
-        <div class="col-md-12">
+        <div class="col-md-6 offset-md-3 card card-body bg-light">
           {% block content %}
           {% endblock %}
         </div>
