Responsive improvement over content col width on base template

--- a/prioriza/templates/base.html
+++ b/prioriza/templates/base.html
@@ -37,7 +37,7 @@
 
     <div class="container">
       <div class="row">
-        <div class="col-md-6 offset-md-3 card card-body bg-light">
+        <div class="col-lg-6 offset-lg-3 col-md-8 offset-md-2 card card-body bg-light">
           {% block content %}
           {% endblock %}
         </div>
