Create PollCreateView, url & empty template
- Create PollCreateView, url & empty template
- Add link to PollCreateView in poll/list.html template

--- a/prioriza/templates/poll/list.html
+++ b/prioriza/templates/poll/list.html
@@ -3,7 +3,7 @@
 {% block content%}
   <div class="row">
     <div class="col-md-12">
-      <a href="#" class="btn btn-primary float-right">
+      <a href="{% url 'poll_create' %}" class="btn btn-primary float-right">
         Create new poll
       </a>
     </div>
