--- a/prioriza/templates/poll/create.html
+++ b/prioriza/templates/poll/create.html
@@ -3,7 +3,7 @@
 {% block content%}
   <div class="row">
     <div class="col-md-12">
-      POLL CREATE VIEW TEMPLATE
+      {% include 'components/forms/create_model.html' %}
     </div>
   </div>
 
