--- a/prioriza/templates/poll/list.html
+++ b/prioriza/templates/poll/list.html
@@ -4,7 +4,7 @@
   <div class="row">
     <div class="col-md-12">
       <a href="{% url 'poll_create' %}" class="btn btn-primary float-right">
-        Create new poll
+        <i class="fas fa-plus"></i>
       </a>
     </div>
   </div>
