Bugfix: Add back button url as parameter in forms/create_model.html

--- a/prioriza/templates/poll/create.html
+++ b/prioriza/templates/poll/create.html
@@ -3,7 +3,7 @@
 {% block content%}
   <div class="row">
     <div class="col-md-12">
-      {% include 'components/forms/create_model.html' %}
+      {% include 'components/forms/create_model.html' with back_url='poll_list'  %}
     </div>
   </div>
 
