--- a/prioriza/templates/components/forms/create_model.html
+++ b/prioriza/templates/components/forms/create_model.html
@@ -4,7 +4,7 @@
 
   <div class="row">
     <div class="col-12">
-      <a href="{% url 'poll_list' %}" class="btn btn-secondary float-left mb-4">
+      <a href="{% url back_url %}" class="btn btn-secondary float-left mb-4">
         <i class="fas fa-arrow-left"></i>
       </a>
     </div>
