--- a/prioriza/templates/base.html
+++ b/prioriza/templates/base.html
@@ -22,6 +22,7 @@
     </title>
   </head>
   <body>
+    {% include 'components/navbar.html' %}
 
     <div class="container">
       <div class="row my-4">
