--- a/prioriza/static/css/prioriza.css
+++ b/prioriza/static/css/prioriza.css
@@ -1,6 +1,17 @@
- @import url('https://fonts.googleapis.com/css?family=Asap');
+@import url('https://fonts.googleapis.com/css?family=Bungee');
+@import url('https://fonts.googleapis.com/css?family=Hind');
 
- body{
-    font-family: 'Asap', sans-serif;
+
+body{
+  font-family: 'Hind', sans-serif;
     background-image: url('../img/background.png');
- }
+}
+
+.logo, .nav-item{
+  font-family: 'Bungee', cursive;
+}
+
+label{
+  font-weight: 700;
+  text-transform: uppercase;
+}
