--- a/prioriza/templates/base.html
+++ b/prioriza/templates/base.html
@@ -27,7 +27,7 @@
     <div class="container">
       <div class="row my-4">
         <div class="col-md-12 text-center">
-          <h1>
+          <h1 class="logo">
             <b>
               prioriza
             </b>
