--- a/prioriza/templates/components/navbar.html
+++ b/prioriza/templates/components/navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container">
-    <a class="navbar-brand" href="{% url 'index' %}">
+    <a class="navbar-brand logo" href="{% url 'index' %}">
       prioriza
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
