--- a/prioriza/templates/base.html
+++ b/prioriza/templates/base.html
@@ -60,6 +60,10 @@
       <script src="https://cdn.jsdelivr.net/npm/vue"></script>
     {% endif %}
 
+    <!-- JS DATA -->
+    <script src="https://cdn.jsdelivr.net/npm/js-data@3.0.5/dist/js-data.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/js-data-http@3.0.1/dist/js-data-http.min.js"></script>
+
     {% block js %}
     {% endblock %}
 
