--- a/prioriza/templates/users/list.html
+++ b/prioriza/templates/users/list.html
@@ -3,7 +3,19 @@
 {% block content%}
   <div class="row">
     <div class="col-md-12">
-      <a href="#" class="btn btn-primary float-right">
+      <div class="form-group">
+        <label>
+          Users list
+        </label>
+        <p>
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-12">
+      <a href="{% url 'user_create' %}" class="btn btn-primary float-right">
         <i class="fas fa-plus"></i> Add user
       </a>
     </div>
@@ -14,7 +26,7 @@
       <ul class="list-group list-group-flush">
         {% for user in users %}
           <li class="list-group-item bg-light">
-            {{ user.email }}
+            {{ user.username }} - {{ user.email }}
           </li>
         {% endfor %}
       </ul>
