--- a/prioriza/templates/base.html
+++ b/prioriza/templates/base.html
@@ -36,7 +36,7 @@
       </div>
     </div>
 
-    <div class="container">
+    <div class="container mb-4">
       <div class="row">
         <div class="col-lg-6 offset-lg-3 col-md-8 offset-md-2 card card-body bg-light">
           {% block content %}
