Add login and logout
- Include django.contrib.auth.urls to accounts path
- Set LOGIN_REDIRECT_URL env var
- Set LOGOUT_REDIRECT_URL env var
- Add submit_text parameter in create_model template
- Create registration/login.html template
- Add links to navbar to allow user logout

--- a/prioriza/templates/components/forms/create_model.html
+++ b/prioriza/templates/components/forms/create_model.html
@@ -55,7 +55,7 @@
           </div>
 
           <div class="col-6">
-            <input type="submit" class="btn btn-primary float-right mb-4" href="{{ submit_url }}" value="Save user">
+            <input type="submit" class="btn btn-primary float-right mb-4" href="{{ submit_url }}" value="{{ submit_text }}">
           </div>
         </div>
 
