--- a/prioriza/templates/components/navbar.html
+++ b/prioriza/templates/components/navbar.html
@@ -27,6 +27,26 @@
 
       </ul>
 
+      {% if user.is_authenticated %}
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <i class="far fa-user"></i> {{ user.username }}
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <!-- <a class="dropdown-item" href="#">
+                <i class="fas fa-user"></i> Edit account
+              </a>
+              <div class="dropdown-divider"></div> -->
+              <a class="dropdown-item" href="{% url 'logout' %}">
+                <i class="fas fa-sign-out-alt"></i> Logout
+              </a>
+            </div>
+          </li>
+
+        </ul>
+      {% endif %}
+
     </div>
   </div>
 </nav>
