--- a/prioriza/templates/users/create.html
+++ b/prioriza/templates/users/create.html
@@ -3,7 +3,7 @@
 {% block content%}
   <div class="row">
     <div class="col-md-12">
-      {% include 'components/forms/create_model.html' with back_url='user_list' form_title='Adding new user' %}
+      {% include 'components/forms/create_model.html' with back_url='user_list' form_title='Adding new user' submit_text='Save user' %}
     </div>
   </div>
 
