--- a/prioriza/templates/index.html
+++ b/prioriza/templates/index.html
@@ -1,5 +1,15 @@
 {% extends 'base.html' %}
 
 {% block content%}
-  {{ message }}
+  <div class="row">
+    <div class="col-12 text-center">
+      <h1>
+        Do you have an account?
+
+      </h1>
+      <a class="btn btn-primary" href="{% url 'login' %}">
+        login
+      </a>
+    </div>
+  </div>
 {% endblock %}
