Justify paragraphs with css in prioriza.css

--- a/prioriza/static/css/prioriza.css
+++ b/prioriza/static/css/prioriza.css
@@ -5,6 +5,10 @@ body{
   font-family: 'Hind', sans-serif;
 }
 
+p{
+  text-align: justify;
+}
+
 .logo, .nav-item{
   font-family: 'Bungee', cursive;
 }
