--- a/prioriza/templates/components/navbar.html
+++ b/prioriza/templates/components/navbar.html
@@ -7,25 +7,28 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarText">
-      <ul class="navbar-nav mr-auto">
 
-        <!-- <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-        </li> -->
+      {% if user.is_authenticated %}
+        <ul class="navbar-nav mr-auto">
 
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'user_list' %}">
-            Users
-          </a>
-        </li>
+          <!-- <li class="nav-item active">
+            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          </li> -->
 
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'poll_list' %}">
-            Polls
-          </a>
-        </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'user_list' %}">
+              Users
+            </a>
+          </li>
 
-      </ul>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'poll_list' %}">
+              Polls
+            </a>
+          </li>
+
+        </ul>
+      {% endif %}
 
       {% if user.is_authenticated %}
         <ul class="navbar-nav ml-auto">
