--- a/prioriza/templates/index.html
+++ b/prioriza/templates/index.html
@@ -1,15 +1,23 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block content%}
-  <div class="row">
-    <div class="col-12 text-center">
-      <h1>
-        Do you have an account?
+  {% if not user.is_authenticated %}
+    <div class="row">
+      <div class="col-12 text-center">
 
-      </h1>
-      <a class="btn btn-primary" href="{% url 'login' %}">
-        login
-      </a>
+        <h3 class="logo">
+          Do you have an account?
+
+        </h3>
+        <a class="btn btn-primary" href="{% url 'login' %}">
+          login
+        </a>
+      </div>
     </div>
-  </div>
+
+
+
+  {% endif %}
+
 {% endblock %}
