Add link to manage users on django admin site in user lists template

--- a/prioriza/templates/users/list.html
+++ b/prioriza/templates/users/list.html
@@ -33,4 +33,12 @@
     </div>
   </div>
 
+  <div class="row">
+    <div class="col-md-12 text-center">
+      <a href="{% url 'admin:auth_user_changelist' %}" class="btn btn-primary">
+        Manage users on admin site
+      </a>
+    </div>
+  </div>
+
 {% endblock %}
