Hide Currency rendering from poll create, detail and result templates

--- a/prioriza/templates/poll/create.html
+++ b/prioriza/templates/poll/create.html
@@ -39,7 +39,7 @@
       </div>
 
       <div class="col-4">
-        <div class="form-group">
+        <!-- <div class="form-group">
           <label>
             Currency
           </label>
@@ -48,7 +48,7 @@
               {{ currency.code }} - {{ currency.name }}
             </option>
           </select>
-        </div>
+        </div> -->
       </div>
 
     </div>
