--- a/prioriza/templates/poll/detail.html
+++ b/prioriza/templates/poll/detail.html
@@ -47,14 +47,14 @@
       </div>
 
       <div class="col-4">
-        <div class="form-group">
+        <!-- <div class="form-group">
           <label>
             Currency
           </label>
           <p>
             CLP - Peso Chileno
           </p>
-        </div>
+        </div> -->
       </div>
 
     </div>
