Add default poll budget & poll_option cost in poll create template

--- a/prioriza/templates/poll/create.html
+++ b/prioriza/templates/poll/create.html
@@ -134,7 +134,7 @@
     var empty_option = {
         name: '',
         id: '',
-        cost: '',
+        cost: 0,
     };
 
     var app = new Vue({
@@ -151,7 +151,7 @@
             code: '',
             name: '',
             description: '',
-            budget: '',
+            budget: 0,
             currency: '',
           },
           poll_options: [
