--- a/prioriza/templates/components/navbar.html
+++ b/prioriza/templates/components/navbar.html
@@ -1,3 +1,4 @@
+{% load check_permission %}
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container">
     <a class="navbar-brand logo" href="{% url 'index' %}">
@@ -15,11 +16,13 @@
             <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
           </li> -->
 
+          {% if user|check_permission:'auth.add_user' %}
           <li class="nav-item">
             <a class="nav-link" href="{% url 'user_list' %}">
               Users
             </a>
           </li>
+          {% endif %}
 
           <li class="nav-item">
             <a class="nav-link" href="{% url 'poll_list' %}">
