--- a/prioriza/templates/users/list.html
+++ b/prioriza/templates/users/list.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load check_permission %}
 
 {% block content%}
   <div class="row">
@@ -15,9 +16,11 @@
 
   <div class="row">
     <div class="col-md-12">
+      {% if user|check_permission:'auth.add_user' %}
       <a href="{% url 'user_create' %}" class="btn btn-primary float-right">
         <i class="fas fa-plus"></i> Add user
       </a>
+      {% endif %}
     </div>
   </div>
 
@@ -26,7 +29,7 @@
       <ul class="list-group list-group-flush">
         {% for user in users %}
           <li class="list-group-item bg-light">
-            {{ user.username }} - {{ user.email }}
+            {{ user.username }}
           </li>
         {% endfor %}
       </ul>
@@ -35,9 +38,11 @@
 
   <div class="row">
     <div class="col-md-12 text-center">
+      {% if user.is_staff %}
       <a href="{% url 'admin:auth_user_changelist' %}" class="btn btn-primary">
         Manage users on admin site
       </a>
+      {% endif %}
     </div>
   </div>
 
