--- a/prioriza/templates/poll/detail.html
+++ b/prioriza/templates/poll/detail.html
@@ -71,7 +71,7 @@
         </span>
       </div>
       <div class="col-8">
-        <i class="fas fa-info-circle text-info"></i>
+        <!-- <i class="fas fa-info-circle text-info"></i> -->
         {{ option.name }} - {{ option.cost }}
       </div>
       <div class="col-2">
